--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <h1 style="background-color: indigo;">This is a Heading.</h1>
 <b>This is a paragraph.</b>
+<b>This is a paragraph, too.</b>
 
 <h2>This is another Heading</h2>
 <p style="color:blue;">This paragraph is blue.</p>
