--- a/index.html
+++ b/index.html
@@ -2,22 +2,38 @@
 <html>
 <head>
 <title>Test-Page</title>
+<style>
+    body {
+                background: lightgreen
+    }
+
+</style>
 </head>
 <body>
 
-<h1 style="background-color: indigo;">This is a Heading.</h1>
-<b>This is a paragraph.</b>
-<b>This is a paragraph, too.</b>
+<h1 style="color: rgb(98, 49, 179);">5 typical Questions:</h1>
+<b style="colour:white;">1. How are you?</b>
+<p style="colour:white;">2. How old are you?</p>
+<p style="colour:white;">3. What's your hight?</p>
+<p style="colour:white;">4. Where are you from?</p>
+<p style="colour:white;">5. What are you doing today?</p>
 
-<h2>This is another Heading</h2>
-<p style="color:blue;">This paragraph is blue.</p>
-<p style="color:red;">This one is red.</p>
-<p style="background-color:cyan;">This one is normal with a <del>orange</del> <mark>cyan</mark> background.</p>
+<h2 style="colour:rgb(85, 18, 18);">My personal answers:</h2>
+<p style="color:blue;">1. I feel good!</p>
+<p style="color:red;">2. nearly 17!</p>
+<p style="color:cyan;">3. I have a hight of <mark>169cm</mark> in DE!</p>
+<p style="color:green;">4. I am from Germany!</p>
+<p style="color:purple;">5. I am going to continue my painting of the BMW M4 competition!</p>
 <style>
-    h3{
-        colour: yellow;
-        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+       h3 {
+        font-size: 3em;
+        background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        animation: text-rainbow 3s infinite;
     }
     </style>
+<h3> Congratiolations <br> You finished the Questioning!</h3>
 </body>
 </html>
