--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            background: repeating-radial-gradient(circle, #ffcccb, #ffcccb 10px, #ffffff 10px, #ffffff 20px);
+            background: repeating-radial-gradient(circle, #000000, #ffffff 10px, #000000 10px, #ffffff 20px);
             animation: illusion 2s infinite;
         }
 
