--- a/hangman/game.html
+++ b/hangman/game.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galgenmännchen</title>
-    <!-- Verlinkung der externen CSS-Datei -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +16,6 @@
         <p id="message"></p>
         <button id="restart-button" style="display: none;">Neustart</button>
     </div>
-    <!-- Verlinkung der externen JavaScript-Datei -->
-    <script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
