Add styles.css file for styling the application

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maries Super Duper Praktikum</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<a href="hangman/game.html">Play Hangman</a>
+    <header>
+        <div class="header-content">
+            <h1>Maries Super Duper Praktikum</h1>
+            <p>Willkommen! Entdecke spannende Projekte und Spiele.</p>
+        </div>
+    </header>
+    <main>
+        <section class="game-link">
+            <h2>Spiele Galgenmännchen</h2>
+            <p>Teste dein Wissen und errate die Wörter!</p>
+            <a href="hangman/game.html" class="button">Jetzt spielen</a>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Maries Praktikum. Alle Rechte vorbehalten.</p>
+    </footer>
 </body>
 </html>
