Add back button to game page and style it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-content">
             <h1>Maries Super Duper Praktikum</h1>
-            <p>Willkommen! Entdecke spannende Projekte und Spiele.</p>
+            <p>Willkommen! Entdecke spannende Spiele.</p>
         </div>
     </header>
     <main>
