--- a/hangman/game.html
+++ b/hangman/game.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Zurück-Button -->
+    <a href="../index.html" class="back-button">Zurück zum Menü</a>
+
     <div id="background-smiley"></div>
     <div id="game-container">
         <h1>Galgenmännchen</h1>
