--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maries Super Duper Praktikum</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
@@ -18,6 +19,21 @@
             <h2>Spiele Galgenmännchen</h2>
             <p>Teste dein Wissen und errate die Wörter!</p>
             <a href="hangman/game.html" class="button">Jetzt spielen</a>
+            <button class="show-instructions" data-game="hangman">Ablauf anzeigen</button>
+            <p class="instructions" id="hangman-instructions" style="display: none;">
+                Beim Galgenmännchen musst du ein verstecktes Wort erraten, indem du Buchstaben auswählst. 
+                Jeder falsche Buchstabe bringt dich näher zum Galgen. Errate das Wort, bevor das Männchen hängt!
+            </p>
+        </section>
+        <section class="game-link">
+            <h2>Spiele Memory</h2>
+            <p>Finde die Paare und verbessere dein Gedächtnis!</p>
+            <a href="Memory/game.html" class="button">Jetzt spielen</a>
+            <button class="show-instructions" data-game="memory">Ablauf anzeigen</button>
+            <p class="instructions" id="memory-instructions" style="display: none;">
+                Beim Memory-Spiel musst du Kartenpaare finden. Klicke auf zwei Karten, um sie umzudrehen. 
+                Wenn sie übereinstimmen, bleiben sie sichtbar. Finde alle Paare, um zu gewinnen!
+            </p>
         </section>
     </main>
     <footer>
