Add game mode selection and bot functionality

--- a/Memory/game.html
+++ b/Memory/game.html
@@ -10,6 +10,12 @@
     <!-- Zurück-Button -->
     <a href="../index.html" class="back-button">Zurück zum Menü</a>
 
+    <div id="game-mode">
+        <h2>Wähle den Spielmodus:</h2>
+        <button id="play-alone">Alleine spielen</button>
+        <button id="play-against-bot">Gegen den Bot spielen</button>
+    </div>
+
     <div id="memory-game">
         <h1>Memory-Spiel</h1>
         <p>Wähle ein Thema aus, um das Spiel zu starten:</p>
@@ -21,6 +27,10 @@
             <button data-theme="tätigkeiten">Tätigkeiten</button>
         </div>
         <div class="game-board"></div>
+    </div>
+
+    <div id="controls">
+        <button id="restart-game">Neustart</button>
     </div>
 
     <script src="script.js" defer></script>
