--- a/Memory/game.html
+++ b/Memory/game.html
@@ -10,13 +10,19 @@
     <!-- Zurück-Button -->
     <a href="../index.html" class="back-button">Zurück zum Menü</a>
 
-    <div id="theme-selection" style="display: none;">
+    <!-- Themen-Auswahl -->
+    <div id="theme-selection">
         <h2>Wähle ein Thema:</h2>
         <button class="theme-button" data-theme="automarken">Automarken</button>
         <button class="theme-button" data-theme="tiere">Tiere</button>
         <button class="theme-button" data-theme="früchte">Früchte</button>
         <button class="theme-button" data-theme="motorräder">Motorräder</button>
         <button class="theme-button" data-theme="tätigkeiten">Tätigkeiten</button>
+    </div>
+
+    <!-- Spielbereich -->
+    <div id="game-board-container" style="display: none;">
+        <div class="game-board"></div>
     </div>
 
     <script src="script.js" defer></script>
