Optimierung für PC/Handy

--- a/Memory/game.html
+++ b/Memory/game.html
@@ -10,6 +10,12 @@
     <!-- Zurück-Button -->
     <a href="../index.html" class="back-button">Zurück zum Menü</a>
 
+    <div id="device-selection">
+        <h2>Wähle dein Gerät:</h2>
+        <button class="device-button" data-device="pc">PC</button>
+        <button class="device-button" data-device="mobile">Handy</button>
+    </div>
+
     <!-- Themen-Auswahl -->
     <div id="theme-selection">
         <h2>Wähle ein Thema:</h2>
