game zum menu hinzufügen

--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
                 Wenn sie übereinstimmen, bleiben sie sichtbar. Finde alle Paare, um zu gewinnen!
             </p>
         </section>
+        <section class="game-link">
+            <h2>Spiele Jump and Run</h2>
+            <p>Springe über Hindernisse und sammle Punkte!</p>
+            <a href="Jump and Run/index.html" class="button">Jetzt spielen</a>
+            <button class="show-instructions" data-game="jump-and-run">Ablauf anzeigen</button>
+            <p class="instructions" id="jump-and-run-instructions" style="display: none;">
+                Beim Jump-and-Run-Spiel steuerst du einen Charakter, der Hindernissen ausweichen muss. 
+                Drücke die Leertaste, um zu springen, und sammle Punkte, indem du so lange wie möglich überlebst!
+            </p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 Maries Praktikum. Alle Rechte vorbehalten.</p>
