--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -11,7 +11,18 @@
     <div id="game-container">
         <div id="player"></div>
         <div id="obstacle"></div>
+        <div id="low-obstacle"></div>
         <div id="score">Punkte: 0</div>
+        <div id="lives">
+            <span class="heart">❤️</span>
+            <span class="heart">❤️</span>
+            <span class="heart">❤️</span>
+        </div>
+        <div id="game-over" style="display: none;">
+            <h1>Game Over</h1>
+            <button id="reset-button">Spiel neu starten</button>
+            <a href="../index.html" class="menu-button">Zurück zum Menü</a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
