Initial commit of Jokes-API project files

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
                 Drücke die Leertaste, um zu springen, und sammle Punkte, indem du so lange wie möglich überlebst!
             </p>
         </section>
+        <section class="game-link">
+    <h2>Witze-API</h2>
+    <p>Wähle eine Kategorie und lass dich von lustigen Witzen unterhalten!</p>
+    <a href="Jokes-API/index.html" class="button">Jetzt ausprobieren</a>
+    <button class="show-instructions" data-game="jokes-api">Ablauf anzeigen</button>
+    <p class="instructions" id="jokes-api-instructions" style="display: none;">
+        Die Witze-API bietet dir lustige Witze aus verschiedenen Kategorien. Wähle eine Kategorie aus, um einen zufälligen Witz zu erhalten, oder füge deine eigenen Witze hinzu!
+    </p>
+</section>
     </main>
     <footer>
         <p>&copy; 2025 Maries Praktikum. Alle Rechte vorbehalten.</p>
