hinzufügen einer suchleiste und Kategorien

--- a/Jokes-API/index.html
+++ b/Jokes-API/index.html
@@ -11,7 +11,8 @@
     <a href="../index.html" class="back-button">Zurück zum Menü</a>
     <section class="jokes-section">
         <h2>Witze-API</h2>
-        <p>Wähle eine Kategorie und lass dich unterhalten!</p>
+        <p>Wähle eine Kategorie oder suche nach einer Kategorie!</p>
+        <input type="text" id="search-category" placeholder="Kategorie suchen..." />
         <select id="joke-category">
             <!-- Kategorien werden dynamisch geladen -->
         </select>
