anpassung für jump and run

--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -24,6 +24,10 @@
             <a href="../index.html" class="menu-button">Zurück zum Menü</a>
         </div>
     </div>
+    <div id="controls">
+        <button id="jump-button">Springen</button>
+        <button id="duck-button">Ducken</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
