Doppelsprung und synchronisierung im jump and run

--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -10,6 +10,7 @@
     <a href="../index.html" class="back-button">Zurück zum Menü</a>
     <div id="game-container">
         <div id="player"></div>
+        <div id="large-obstacle"></div>
         <div id="obstacle"></div>
         <div id="low-obstacle"></div>
         <div id="score">Punkte: 0</div>
