--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </p>
         </section>
         <section class="game-link">
-             <h2>Witze-API</h2>
+             <h2>Jokes</h2>
             <p>Wähle eine Kategorie und lass dich von lustigen Witzen unterhalten!</p>
             <a href="Jokes-API/index.html" class="button">Jetzt ausprobieren</a>
             <button class="show-instructions" data-game="jokes-api">Ablauf anzeigen</button>
