--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -22,7 +22,9 @@
         </div>
         <div id="game-over-screen" style="display: none;">
             <h1>Game Over</h1>
+            <p id="score-display"></p>
             <button id="restart-button">Restart</button>
+            <a href="../index.html" id="menu-button">Zurück zum Menü</a>
         </div>
     </main>
     <script src="script.js"></script>
