game over buttons

--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -20,11 +20,13 @@
             <div class="obstacle" id="obstacle-1"></div>
             <div class="obstacle" id="obstacle-2"></div>
         </div>
+
+        /* Game Over Screen */
         <div id="game-over-screen" style="display: none;">
             <h1>Game Over</h1>
             <p id="score-display"></p>
             <button id="restart-button">Restart</button>
-            <a href="../index.html" id="menu-button">Zurück zum Menü</a>
+            <a href="index.html" id="menu-button">Zurück zum Menü</a>
         </div>
     </main>
     <script src="script.js"></script>
