menu button reparieren p.3

--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -26,7 +26,7 @@
             <h1>Game Over</h1>
             <p id="score-display"></p>
             <button id="restart-button">Restart</button>
-            <a href="../index.html" id="menu-button">Zurück zum Menü</a>
+           <a href="menu/index.html" id="menu-button">Zurück zum Menü</a>
         </div>
     </main>
     <script src="script.js"></script>
