--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -25,7 +25,13 @@
             <h1>Game Over</h1>
             <p id="score-display"></p>
             <button id="restart-button">Restart</button>
-          <a href="../index.html" class="back-button">Zurück zum Menü</a>
+            <a href="/index.html" class="back-button">Zurück zum Menü</a> <!-- Link zurück zum Menü -->
+        </div>
+
+        <!-- Steuerungsbuttons für Handynutzer -->
+        <div id="controls">
+            <button id="jump-button">Springen</button>
+            <button id="duck-button">Ducken</button>
         </div>
     </main>
     <script src="script.js"></script>
