--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -25,7 +25,7 @@
             <h1>Game Over</h1>
             <p id="score-display"></p>
             <button id="restart-button">Restart</button>
-            <a href="/index.html" class="back-button">Zurück zum Menü</a> <!-- Link zurück zum Menü -->
+            <a href="../index.html" class="back-button">Zurück zum Menü</a> <!-- Link zurück zum Menü -->
         </div>
 
         <!-- Steuerungsbuttons für Handynutzer -->
