--- a/Jump and Run/index.html
+++ b/Jump and Run/index.html
@@ -21,11 +21,11 @@
             <div class="obstacle" id="obstacle-2"></div>
         </div>
 
-        <div id="game-over-screen" style="display: none;">
+       <div id="game-over-screen" style="display: none;">
             <h1>Game Over</h1>
             <p id="score-display"></p>
             <button id="restart-button">Restart</button>
-            <a href="../index.html" class="back-button">Zurück zum Menü</a> <!-- Link zurück zum Menü -->
+            <a href="../index.html" class="back-button">Zurück zum Menü</a>
         </div>
 
         <!-- Steuerungsbuttons für Handynutzer -->
