Meinungs und hinzufügen fähigkeit

--- a/Jokes-API/index.html
+++ b/Jokes-API/index.html
@@ -23,6 +23,18 @@
         <button id="get-joke">Erzähl mir einen Witz!</button>
         <div id="joke-display"></div>
     </section>
+
+    <section class="add-joke-section">
+        <h2>Füge deinen eigenen Witz hinzu</h2>
+        <textarea id="user-joke" placeholder="Schreibe deinen Witz hier..." rows="4"></textarea>
+        <button id="add-joke">Witz hinzufügen</button>
+    </section>
+
+    <section class="user-jokes-section">
+        <h2>Witze von anderen Nutzern</h2>
+        <div id="user-jokes-display"></div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
