Chuck Norris hinzugefügt

--- a/Jokes-API/index.html
+++ b/Jokes-API/index.html
@@ -14,10 +14,11 @@
             <option value="Any">Beliebig</option>
             <option value="Programming">Programmierung</option>
             <option value="Miscellaneous">Verschiedenes</option>
-            <option value="Dark">Dunkel</option>
+            <option value="Dark">Schwarz</option>
             <option value="Pun">Wortspiele</option>
             <option value="Spooky">Gruselig</option>
             <option value="Christmas">Weihnachten</option>
+            <option value="ChuckNorris">Chuck Norris</option> <!-- chuck norris joke section-->
         </select>
         <input type="text" id="search-category" placeholder="Suchbegriff eingeben..." />
         <button id="get-joke">Erzähl mir einen Witz!</button>
