hinzufügen von Malen nach Zahlen ins Hauptmenu

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
                  Die Witze-API bietet dir lustige Witze aus verschiedenen Kategorien. Wähle eine Kategorie aus, um einen zufälligen Witz zu erhalten, oder füge deine eigenen Witze hinzu!
             </p>
         </section>
+        <section class="game-link">
+            <h2>Malen nach Zahlen</h2>
+            <p>Wähle ein Motiv und male es mit verschiedenen Farben aus!</p>
+            <a href="Malen nach Zahlen/index.html" class="button">Jetzt spielen</a>
+            <button class="show-instructions" data-game="paint-by-numbers">Ablauf anzeigen</button>
+            <p class="instructions" id="paint-by-numbers-instructions" style="display: none;">
+                Beim Spiel "Malen nach Zahlen" kannst du ein Motiv auswählen und es mit verschiedenen Farben ausmalen. 
+                Wähle eine Farbe aus der Palette und klicke auf die weißen Bereiche des Motivs, um sie auszumalen!
+            </p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 Maries Praktikum. Alle Rechte vorbehalten.</p>
