Web Motive malen können

--- a/Malen nach Zahlen/index.html
+++ b/Malen nach Zahlen/index.html
@@ -33,6 +33,13 @@
             <h3>Motiv</h3>
             <div id="canvas"></div>
         </div>
+        <div>
+            <label for="image-url">Bild-URL:</label>
+            <input type="text" id="image-url" placeholder="Füge die URL eines Bildes ein" />
+            <button id="load-image">Bild laden</button>
+        </div>
+        <canvas id="hidden-canvas" style="display: none;"></canvas>
+        <div id="canvas"></div>
     </section>
     <script src="script.js"></script>
 </body>
