Hinzufügen eines Ladeindikators für das Bildladen

--- a/Malen nach Zahlen/index.html
+++ b/Malen nach Zahlen/index.html
@@ -16,6 +16,7 @@
             <label for="image-url">Bild-URL:</label>
             <input type="text" id="image-url" placeholder="Füge die URL eines Bildes ein" />
             <button id="load-image">Bild laden</button>
+            <div id="loading-indicator" style="display: none;">Bild wird geladen...</div>
         </div>
 
         <!-- Container für das Motiv und die Farbpalette -->
